--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
                 <h2>Login</h2>
                 <form action="#">
                     <div class="input-group">
-                        <label for="username">Username:</label>
+                        <label for="username">Usuário:</label>
                         <input type="text" id="username" name="username" required>
                     </div>
                     <div class="input-group">
-                        <label for="password">Password:</label>
+                        <label for="password">Senha:</label>
                         <input type="password" id="password" name="password" required>
                     </div>
                     </br>
