--- a/Relatorio.html
+++ b/Relatorio.html
@@ -32,7 +32,7 @@
                         </br>                        
                         <div class="tab-titles">
                             <p class="tab-links active-link" onclick="opentab('Skills')">Relatórios por produto</p>
-                            <p class="tab-links" onclick="opentab('Education')">Relatórios Mensais</p>
+                            <p class="tab-links" onclick="opentab('Education')">Relatório Geral</p>
                         </div>
         
                         <div class="tab-contents active-tab" id="Skills">
@@ -95,14 +95,14 @@
                                 <tr>
                                     <td>Ácido Clorídrico</td>
                                     <td>3</td>
-                                    <td>kg</td>
+                                    <td>L</td>
                                     <td>Carlos Souza</td>
                                     <td>Entrada</td>
                                 </tr>
                                 <tr>
                                     <td>Ácido Clorídrico</td>
                                     <td>2</td>
-                                    <td>kg</td>
+                                    <td>L</td>
                                     <td>Ana Santos</td>
                                     <td>Entrada</td>
                                 </tr>
@@ -137,28 +137,28 @@
                                 <tr>
                                     <td>Ácido Clorídrico</td>
                                     <td>6</td>
-                                    <td>kg</td>
+                                    <td>L</td>
                                     <td>Júlio Santos</td>
                                     <td>Entrada</td>
                                 </tr>
                                 <tr>
                                     <td>Ácido Clorídrico</td>
                                     <td>3</td>
-                                    <td>kg</td>
+                                    <td>L</td>
                                     <td>Carolina Costa</td>
                                     <td>Entrada</td>
                                 </tr>
                                 <tr>
                                     <td>Ácido Clorídrico</td>
                                     <td>8</td>
-                                    <td>kg</td>
+                                    <td>L</td>
                                     <td>Renato Silva</td>
                                     <td>Consumo</td>
                                 </tr>
                                 <tr>
                                     <td>Ácido Clorídrico</td>
                                     <td>10</td>
-                                    <td>kg</td>
+                                    <td>L</td>
                                     <td>Larissa Oliveira</td>
                                     <td>Consumo</td>
                                 </tr>
