--- a/Produtos.html
+++ b/Produtos.html
@@ -32,6 +32,7 @@
                         </br>                        
                         <div class="tab-titles">
                             <p class="tab-links  active-link" onclick="opentab('todos')">Todos os Produto</p>
+                            <p class="tab-links" onclick="opentab('Education2')">Produto por Responsável</p>
                             <p class="tab-links" onclick="opentab('Skills')">Adicionar Produto</p>
                             <p class="tab-links" onclick="opentab('Education')">Remover Produto</p>
                         </div>
@@ -108,6 +109,80 @@
                                 </tbody>
                             </table>
                             
+                        </div>
+                        <div class="tab-contents" id="Education2">
+                            <select name="nomes" id="nomes">
+                                <option>João</option>
+                                <option>Maria</option>
+                                <option>Carlos</option>
+                                <option>Ana</option>
+                                <option>Pedro</option>
+                                <option>Carlinhos</option>
+                                <option>Ana Paula</option>
+                                <option>Pedro Rocha</option>
+                            </select>
+                            <table>
+                                <thead>
+                                    <tr>
+                                        <th>Produto Químico</th>
+                                        <th>Quantidade</th>
+                                        <th>Responsável</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>Ácido Sulfúrico</td>
+                                        <td>100 litros</td>
+                                        <td>João</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Hidróxido de Sódio</td>
+                                        <td>50 kg</td>
+                                        <td>Maria</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Ácido Clorídrico</td>
+                                        <td>80 litros</td>
+                                        <td>Carlos</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Ácido Sulfúrico</td>
+                                        <td>100 litros</td>
+                                        <td>João</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Hidróxido de Sódio</td>
+                                        <td>50 kg</td>
+                                        <td>Maria</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Ácido Clorídrico</td>
+                                        <td>80 litros</td>
+                                        <td>Carlos</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Sulfato de Cobre</td>
+                                        <td>30 kg</td>
+                                        <td>Ana</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Hipoclorito de Sódio</td>
+                                        <td>60 litros</td>
+                                        <td>Rodrigo</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Sulfato de Cobre</td>
+                                        <td>30 kg</td>
+                                        <td>Ana</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Hipoclorito de Sódio</td>
+                                        <td>60 litros</td>
+                                        <td>Rodrigo</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                            <button class="print-button" onclick="window.print()"><i class="fa-solid fa-print"></i> Imprimir</button>
                         </div>
                         <div class="tab-contents" id="Skills">
                             <div class="form-container">
