--- a/Usuarios.html
+++ b/Usuarios.html
@@ -16,10 +16,13 @@
             <ul id="sidemenu">
                 <img src="images/logomenu.png" class="logo">
                 </br></br>
-                <li><a href="Relatorio.html"><i class="fa-regular fa-newspaper"></i> Relatórios</a></li>
-                <li><a href="Produtos.html"><i class="fa-regular fa-clipboard"></i> Produtos</a></li>
-                <li><a href="Usuarios.html"><i class="fa-regular fa-user"></i> Usuarios</a></li>
-            </br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br>
+                <li><a href="Inventario.html">Inventário</a></li>
+                <li><a href="Relatorio.html">Relatórios</a></li>
+                <li><a href="Produtos.html">Produtos</a></li>
+                <li><a href="Usuarios.html">Usuários</a></li>
+                <li><a href="Fornecedores.html">Fornecedores</a></li>
+                <li><a href="Laboratorio.html">Laboratórios</a></li>
+                </br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br>
                 <li><a href="index.html">Sair</a></li>
             </ul>
         </nav>
