--- a/Produtos.html
+++ b/Produtos.html
@@ -16,10 +16,13 @@
             <ul id="sidemenu">
                 <img src="images/logomenu.png" class="logo">
                 </br></br>
-                <li><a href="Relatorio.html"><i class="fa-regular fa-newspaper"></i> Relatórios</a></li>
-                <li><a href="Produtos.html"><i class="fa-regular fa-clipboard"></i> Produtos</a></li>
-                <li><a href="Usuarios.html"><i class="fa-regular fa-user"></i> Usuarios</a></li>
-            </br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br>
+                <li><a href="Inventario.html">Inventário</a></li>
+                <li><a href="Relatorio.html">Relatórios</a></li>
+                <li><a href="Produtos.html">Produtos</a></li>
+                <li><a href="Usuarios.html">Usuários</a></li>
+                <li><a href="Fornecedores.html">Fornecedores</a></li>
+                <li><a href="Laboratorio.html">Laboratórios</a></li>
+                </br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br>
                 <li><a href="index.html">Sair</a></li>
             </ul>
         </nav>
@@ -32,157 +35,68 @@
                         </br>                        
                         <div class="tab-titles">
                             <p class="tab-links  active-link" onclick="opentab('todos')">Todos os Produto</p>
-                            <p class="tab-links" onclick="opentab('Education2')">Produto por Responsável</p>
-                            <p class="tab-links" onclick="opentab('Skills')">Adicionar Produto</p>
+                            <p class="tab-links " onclick="opentab('Skills')">Adicionar Produto</p>
                             <p class="tab-links" onclick="opentab('Education')">Remover Produto</p>
                         </div>
         
-                        <div class="tab-contents active-tab" id="todos">
+ 
+                        <div class="tab-contents  active-tab" id="todos">
                             <table>
                                 <thead>
                                     <tr>
                                         <th>Produto Químico</th>
-                                        <th>Quantidade</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     <tr>
                                         <td>Ácido Sulfúrico</td>
-                                        <td class="numeric">1000 litros</td>
                                     </tr>
                                     <tr>
                                         <td>Hidróxido de Sódio</td>
-                                        <td class="numeric">500 kg</td>
                                     </tr>
                                     <tr>
                                         <td>Nitrogênio Líquido</td>
-                                        <td class="numeric">2000 litros</td>
                                     </tr>
                                     <tr>
                                         <td>Cloreto de Sódio</td>
-                                        <td class="numeric">300 kg</td>
                                     </tr>
                                     <tr>
                                         <td>Ácido Clorídrico</td>
-                                        <td class="numeric">800 litros</td>
                                     </tr>
                                     <tr>
                                         <td>Peróxido de Hidrogênio</td>
-                                        <td class="numeric">600 litros</td>
                                     </tr>
                                     <tr>
                                         <td>Ácido Nítrico</td>
-                                        <td class="numeric">700 litros</td>
                                     </tr>
                                     <tr>
                                         <td>Sulfato de Cobre</td>
-                                        <td class="numeric">400 kg</td>
                                     </tr>
                                     <tr>
                                         <td>Cloro Gasoso</td>
-                                        <td class="numeric">1500 litros</td>
                                     </tr>
                                     <tr>
                                         <td>Hidróxido de Amônio</td>
-                                        <td class="numeric">350 kg</td>
                                     </tr>
                                     <tr>
                                         <td>Ácido Fórmico</td>
-                                        <td class="numeric">900 litros</td>
                                     </tr>
                                     <tr>
                                         <td>Sulfato de Magnésio</td>
-                                        <td class="numeric">250 kg</td>
                                     </tr>
                                     <tr>
                                         <td>Hidróxido de Potássio</td>
-                                        <td class="numeric">550 kg</td>
                                     </tr>
                                     <tr>
                                         <td>Óxido de Zinco</td>
-                                        <td class="numeric">200 kg</td>
                                     </tr>
                                     <tr>
                                         <td>Hipoclorito de Sódio</td>
-                                        <td class="numeric">1200 litros</td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                            
-                        </div>
-                        <div class="tab-contents" id="Education2">
-                            <select name="nomes" id="nomes">
-                                <option>João</option>
-                                <option>Maria</option>
-                                <option>Carlos</option>
-                                <option>Ana</option>
-                                <option>Pedro</option>
-                                <option>Carlinhos</option>
-                                <option>Ana Paula</option>
-                                <option>Pedro Rocha</option>
-                            </select>
-                            <table>
-                                <thead>
-                                    <tr>
-                                        <th>Produto Químico</th>
-                                        <th>Quantidade</th>
-                                        <th>Responsável</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td>Ácido Sulfúrico</td>
-                                        <td>100 litros</td>
-                                        <td>João</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Hidróxido de Sódio</td>
-                                        <td>50 kg</td>
-                                        <td>Maria</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Ácido Clorídrico</td>
-                                        <td>80 litros</td>
-                                        <td>Carlos</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Ácido Sulfúrico</td>
-                                        <td>100 litros</td>
-                                        <td>João</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Hidróxido de Sódio</td>
-                                        <td>50 kg</td>
-                                        <td>Maria</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Ácido Clorídrico</td>
-                                        <td>80 litros</td>
-                                        <td>Carlos</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Sulfato de Cobre</td>
-                                        <td>30 kg</td>
-                                        <td>Ana</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Hipoclorito de Sódio</td>
-                                        <td>60 litros</td>
-                                        <td>Rodrigo</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Sulfato de Cobre</td>
-                                        <td>30 kg</td>
-                                        <td>Ana</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Hipoclorito de Sódio</td>
-                                        <td>60 litros</td>
-                                        <td>Rodrigo</td>
                                     </tr>
                                 </tbody>
                             </table>
                             <button class="print-button" onclick="window.print()"><i class="fa-solid fa-print"></i> Imprimir</button>
+
                         </div>
                         <div class="tab-contents" id="Skills">
                             <div class="form-container">
