--- a/Inventario.html
+++ b/Inventario.html
@@ -18,6 +18,7 @@
                 </br>
                 <li><a href="Perfil.html" style="border-bottom: 1px solid;"><i class="fas fa-user"></i> Luis Gustavo</a></li>
                 </br>
+                <li><a href="MovimentacaoEstoque.html"><i class="fas fa-exchange-alt"></i> Movimentação</a></li>
                 <li><a href="Inventario.html"><i class="fas fa-boxes"></i> Inventário</a></li>
                 <li><a href="Relatorio.html"><i class="fas fa-chart-line"></i> Relatórios</a></li>
                 <li class="submenu">
